--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>HN Plays 2048</title>
-
+  <title>Yo Plays 2048</title>
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:700,400">
   <link href="style/main.css" rel="stylesheet" type="text/css">
 
   <meta name="HandheldFriendly" content="True">
@@ -18,7 +18,7 @@
     </div>
     <div class="game">
       <div class="heading">
-        <h1 class="title">HN Plays 2048</h1>
+        <h1 class="title">Yo Plays 2048</h1>
         <div class="score-container">0</div>
       </div>
       <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
