Edit index.html and add win/lose yoall code

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     </div>
     <div class="game">
       <div class="heading">
-        <h1 class="title">Yo Plays 2048</h1>
+        <h1 class="title">Yo<h1>
+        </br>
+          <h1>...Plays 2048</h1>
         <div class="score-container">0</div>
       </div>
       <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
@@ -64,10 +66,11 @@
         </div>
       </div>
       <p class="game-explanation">
-        <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
+        <strong class="important">How to Play:</strong></br>
+        Send a Yo! to <strong>UP2048, RIGHT2048, DOWN2048,</strong> or <strong>LEFT2048</strong>
       </p>
       <p class="game-explanation">
-        However, this is HN plays 2048, which means anybody who is online can move your pieces!
+        Send a Yo! to <strong>YOUWON2048</strong> and <strong>YOULOST2048</strong> to get Yo!'d back when everyone wins or loses <br>(it's a cooperative multiplayer game!)
       </p>
       <hr>
       <ul class="links">
@@ -77,13 +80,13 @@
         <li>Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a></li>
       </ul>
       <p class="social">
-        <span>
+<!--         <span>
           <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out the multiplayer &quot;Twitch Plays&quot; 2048!" data-via="granttimmerman" data-hashtags="hnplays2048">Tweet</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
         </span>
         <span>
           See source on <a href="https://github.com/grant/hnplays2048">Github</a>!
-        </span>
+        </span> -->
       </p>
     </div>
     <div class="userInputs">
