--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       </p>
       <hr>
       <ul class="links">
+        <li>Yo! Version by <a href="http://github.com/huyouare">Jesse Hu</a></li>
         <li>Multiplayer by <a href="http://github.com/grant">Grant Timmerman</a></li>
         <li>Democracy by <a href="https://github.com/dbieber">David Bieber</a></li>
         <li>Game by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a></li>
