--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Yo Plays 2048</title>
+  <link rel="shortcut icon" href="https://yoapp.s3.amazonaws.com/yo/favicon.ico">
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:700,400">
   <link href="style/main.css" rel="stylesheet" type="text/css">
 
@@ -18,8 +19,7 @@
     </div>
     <div class="game">
       <div class="heading">
-        <h1 class="title">Yo<h1>
-        </br>
+        <h1 class="title">Yo<h1><br>
           <h1>...Plays 2048</h1>
         <div class="score-container">0</div>
       </div>
@@ -66,11 +66,11 @@
         </div>
       </div>
       <p class="game-explanation">
-        <strong class="important">How to Play:</strong></br>
-        Send a Yo! to <strong>UP2048, RIGHT2048, DOWN2048,</strong> or <strong>LEFT2048</strong>
+        <strong class="important">How to Play:</strong><br />
+        Send a <strong>Yo</strong> to <br /><strong>UP2048, RIGHT2048, DOWN2048,</strong> or <strong>LEFT2048</strong>
       </p>
       <p class="game-explanation">
-        Send a Yo! to <strong>YOUWON2048</strong> and <strong>YOULOST2048</strong> to get Yo!'d back when everyone wins or loses <br>(it's a cooperative multiplayer game!)
+        Send a <strong>Yo</strong> to <br /><strong>YOUWON2048</strong> and <strong>YOULOST2048</strong> to get Yo'd back when everyone wins or loses <br>(it's a cooperative multiplayer game!)
       </p>
       <hr>
       <ul class="links">
