--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </div>
     <div class="game">
       <div class="heading">
-        <h1 class="title">Yo<h1><br>
+        <h1 class="title"><a href="http://www.justyo.co">Yo</a><h1><br>
           <h1>...Plays 2048</h1>
         <div class="score-container">0</div>
       </div>
-      <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
-      <p class="game-intro hidden-p"><strong class="numUsers">1</strong> <span class="userString">user</span> online</p>
+      <p class="game-intro">Join the numbers using <strong>2048 tile,</strong> yo!</p>
+      <p class="game-intro"><strong class="numUsers">0</strong> <span class="userString">Yos</span> sent</p>
 
       <div class="game-container">
         <div class="game-message">
@@ -67,6 +67,7 @@
       </div>
       <p class="game-explanation">
         <strong class="important">How to Play:</strong><br />
+        Get the <a href="http://www.justyo.co/">Yo App</a><br />
         Send a <strong>Yo</strong> to <br /><strong>UP2048, RIGHT2048, DOWN2048,</strong> or <strong>LEFT2048</strong>
       </p>
       <p class="game-explanation">
@@ -74,7 +75,7 @@
       </p>
       <hr>
       <ul class="links">
-        <li>Yo! Version by <a href="http://github.com/huyouare">Jesse Hu</a></li>
+        <li>Yo Version by <a href="http://github.com/huyouare">Jesse Hu</a></li>
         <li>Multiplayer by <a href="http://github.com/grant">Grant Timmerman</a></li>
         <li>Democracy by <a href="https://github.com/dbieber">David Bieber</a></li>
         <li>Game by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a></li>
