Change tile colors and edit html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <h1>...Plays 2048</h1>
         <div class="score-container">0</div>
       </div>
-      <p class="game-intro">Join the numbers using <strong>2048 tile,</strong> yo!</p>
+      <p class="game-intro">Join the numbers and get to the <strong>2048 tile,</strong> yo!</p>
       <p class="game-intro"><strong class="numUsers">0</strong> <span class="userString">Yos</span> sent</p>
 
       <div class="game-container">
@@ -66,8 +66,12 @@
         </div>
       </div>
       <p class="game-explanation">
-        <strong class="important">How to Play:</strong><br />
-        Get the <a href="http://www.justyo.co/">Yo App</a><br />
+        <strong class="important">How to Play:</strong>
+      </p>
+      <p class="game-explanation">
+        Get the <a href="http://www.justyo.co/">Yo App</a>
+      </p>
+      <p class="game-explanation">
         Send a <strong>Yo</strong> to <br /><strong>UP2048, RIGHT2048, DOWN2048,</strong> or <strong>LEFT2048</strong>
       </p>
       <p class="game-explanation">
