--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
         <li>Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a></li>
       </ul>
       <p class="social">
-        <span>
+        <!-- <span>
           <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out the multiplayer &quot;Twitch Plays&quot; 2048!" data-via="granttimmerman" data-hashtags="hnplays2048">Tweet</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
         </span>
         <span>
-          See source on <a href="https://github.com/grant/hnplays2048">Github</a>!
-        </span>
+          See source on <a href="https://github.com/grant/hlays2048">Github</a>!
+        </span> -->
       </p>
     </div>
     <div class="userInputs">
@@ -112,6 +112,17 @@
   <script src="js/tile.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
+
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-42844574-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 
 </body>
