--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="score-container">0</div>
       </div>
       <p class="game-intro">Join the numbers and get to the <strong>2048 tile,</strong> yo!</p>
+
       <p class="game-intro"><strong class="numUsers">0</strong> <span class="userString">Yos</span> sent</p>
 
       <div class="game-container">
@@ -75,7 +76,11 @@
         Send a <strong>Yo</strong> to <br /><strong>UP2048, RIGHT2048, DOWN2048,</strong> or <strong>LEFT2048</strong>
       </p>
       <p class="game-explanation">
-        Send a <strong>Yo</strong> to <br /><strong>YOUWON2048</strong> and <strong>YOULOST2048</strong> to get Yo'd back when everyone wins or loses <br>(it's a cooperative multiplayer game!)
+        Send a <strong>Yo</strong> to <br /><strong>YOUWON2048</strong> and <strong>YOULOST2048</strong> to get Yo'd back when everyone wins or loses <br>(it's a cooperative multiplayer game!)<br />
+      </p>
+      <p class="social">
+        <a href="https://twitter.com/share" class="twitter-share-button" data-text="Now there's 2048 reasons to use Yo." data-size="large" data-hashtags="Yo2048" data-dnt="true">Tweet</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
       </p>
       <hr>
       <ul class="links">
@@ -85,15 +90,7 @@
         <li>Game by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a></li>
         <li>Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a></li>
       </ul>
-      <p class="social">
-        <!-- <span>
-          <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out the multiplayer &quot;Twitch Plays&quot; 2048!" data-via="granttimmerman" data-hashtags="hnplays2048">Tweet</a>
-          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-        </span>
-        <span>
-          See source on <a href="https://github.com/grant/hlays2048">Github</a>!
-        </span> -->
-      </p>
+
     </div>
     <div class="userInputs">
       <h4 class="title">Inputs</h4>
