--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no">
 </head>
 <body>
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
   <div class="container">
     <div class="highscores">
       <h4 class="title">Highscores</h4>
@@ -79,8 +87,9 @@
         Send a <strong>Yo</strong> to <br /><strong>YOUWON2048</strong> and <strong>YOULOST2048</strong> to get Yo'd back when everyone wins or loses <br>(it's a cooperative multiplayer game!)<br />
       </p>
       <p class="social">
-        <a href="https://twitter.com/share" class="twitter-share-button" data-text="Now there's 2048 reasons to use Yo." data-size="large" data-hashtags="Yo2048" data-dnt="true">Tweet</a>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://yo2048.com" data-text="Now there's 2048 reasons to use Yo." data-size="large" data-hashtags="Yo2048" data-dnt="true">Tweet</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        <div class="fb-share-button" data-href="https://yo2048.com" data-type="button"></div>
       </p>
       <hr>
       <ul class="links">
