Add meta tags for social and Google

--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no">
+  <!-- for Google -->
+  <meta name="description" content="Yo Plays 2048" />
+  <meta name="keywords" content="Yo Plays 2048" />
+  <meta name="author" content="Jesse Hu" />
+  <meta name="copyright" content="2014" />
+
+  <!-- for Facebook -->          
+  <meta property="og:title" content="Yo2048" />
+  <meta property="og:type" content="article" />
+  <meta property="og:image" content="http://yo2048.com/screenshot.png" />
+  <meta property="og:url" content="http://yo2048.com" />
+  <meta property="og:description" content="Now there's 2048 reasons to Yo" />
+
+  <!-- for Twitter -->          
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Yo2048" />
+  <meta name="twitter:description" content="Yo Plays 2048" />
+  <meta name="twitter:image" content="http://yo2048.com/screenshot.png" />
 </head>
 <body>
   <div id="fb-root"></div>
